Fix icon alignment bug

--- a/src/style.css
+++ b/src/style.css
@@ -98,6 +98,7 @@ body {
   padding-bottom: 2em;
   margin: 0;
   display: flex;
+  align-items: baseline;
   gap: 1.25em;
 }
 
